# eduhub-inv

api/: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  PERFORMANCE_REPORT.md  QA_REPORT.md  README.md  SECURITY.md  SECURITY_VALIDATION.md  TESTING.md  alembic.ini  constraints.txt  docker-compose.test.yml  docker-compose.yml  pyproject.toml
api/.github/workflows/: ci.yml  security.yml
api/alembic/: env.py
api/alembic/versions/: 20260510_0001_initial_schema.py  20260511_0002_auth_security.py  20260512_0003_academic_domain.py
api/app/: __init__.py  main.py
api/app/academic/: access.py  gpa.py
api/app/api/: __init__.py  deps.py  docs.py  exception_handlers.py  openapi.py
api/app/api/v1/: health.py  (+1 more)
api/app/auth/: __init__.py  dependencies.py  hashing.py  jwt.py  permissions.py  service.py  token_fingerprint.py  validators.py
api/app/core/: __init__.py  config.py  lifespan.py  redis_client.py
api/app/db/: __init__.py  base.py  session.py
api/app/domain/: __init__.py  enums.py
api/app/logging/: __init__.py  setup.py
api/app/metrics/: __init__.py  prometheus.py  security_metrics.py
api/app/middleware/: __init__.py  api_route_rate_limit.py  body_limit.py  request_id.py  request_logging.py  security_headers.py  security_observability.py
api/app/models/: __init__.py  associations.py  audit_log.py  course.py  course_enrollment.py  enrollment_application.py  grade.py  grade_history.py  login_attempt.py  password_history.py  refresh_session.py  role.py  student.py  teacher.py  user.py
api/app/repositories/: __init__.py  application_repository.py  base.py  course_repository.py  enrollment_repository.py  grade_repository.py  student_repository.py
api/app/schemas/: __init__.py  common.py
api/app/security/: __init__.py  audit.py  domain_audit.py  events.py  file_security.py  headers.py  rate_limit.py  safe_query.py  secure_http.py  sensitive_routes.py  validators.py
api/app/services/: __init__.py  application_service.py  course_service.py  grade_service.py  student_service.py
api/app/utils/: __init__.py  http.py
api/infra/kibana/: security-queries.md
api/scripts/: __init__.py  docker-entrypoint.sh  seed_academic_data.py
api/tests/: __init__.py  conftest.py
(+77 files in other folders)
